add checkout and data.json

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@reduxjs/toolkit": "1.5.0",
     "@tailwindcss/line-clamp": "^0.2.0",
     "currency-formatter": "^1.5.8",
-    "firebase": "^8.6.1",
+    "firebase": "^8.10.0",
     "firebase-admin": "^9.8.0",
+    "framer-motion": "^4.1.17",
     "next": "^11.1.2",
+    "next-auth": "^3.29.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "7.2.2",
