--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:parcel": "parcel serve ./src/index.html",
     "dev:css": "tailwindcss -o src/tailwind.css -w",
     "build:parcel": "parcel build ./src/index.html",
-    "build:css": "tailwindcss -o src/tailwind.css"
+    "build:css": "tailwindcss -o src/tailwind.css",
+    "server": "node src/pages/api/server.js"
   },
   "dependencies": {
     "@emotion/react": "^11.4.1",
@@ -18,15 +19,20 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@heroicons/react": "^1.0.4",
+    "@material-ui/icons": "^4.11.2",
     "@mui/material": "^5.0.1",
     "@reduxjs/toolkit": "1.5.0",
     "@tailwindcss/line-clamp": "^0.2.0",
+    "axios": "^0.21.4",
+    "cors": "^2.8.5",
     "currency-formatter": "^1.5.8",
+    "express": "^4.17.1",
     "firebase": "^8.10.0",
     "firebase-admin": "^9.8.0",
     "framer-motion": "^4.1.17",
     "next": "^11.1.2",
     "next-auth": "^3.29.0",
+    "nodemailer": "^6.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "7.2.2",
