--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "^11.1.2",
     "next-auth": "^3.29.0",
     "nodemailer": "^6.6.3",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "7.2.2",
