--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "7.2.2",
-    "react-responsive-carousel": "^3.2.21"
+    "react-responsive-carousel": "^3.2.21",
+    "react-toastify": "^8.1.0"
   },
   "license": "MIT",
   "devDependencies": {
