--- a/package.json
+++ b/package.json
@@ -27,19 +27,24 @@
     "axios": "^0.21.4",
     "cors": "^2.8.5",
     "currency-formatter": "^1.5.8",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase": "^8.10.0",
     "firebase-admin": "^9.8.0",
     "framer-motion": "^4.1.17",
+    "fuse.js": "^6.4.6",
     "next": "^11.1.2",
     "next-auth": "^3.29.0",
     "nodemailer": "^6.6.3",
     "nprogress": "^0.2.0",
+    "path": "^0.12.7",
+    "razorpay": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "7.2.2",
     "react-responsive-carousel": "^3.2.21",
-    "react-toastify": "^8.1.0"
+    "react-toastify": "^8.1.0",
+    "shortid": "^2.2.16"
   },
   "license": "MIT",
   "devDependencies": {
